# NousIntelligence

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.js  .replit  .replit.backup  .replit.conf  .replit.deployment  .replit.init  .replit.public  .replit.run  .replit.toml  .replit.workflow  .replit.workflows  .secret_key  100_PERCENT_SUCCESS_REPORT.md  100_coverage_report_20250701_200005.json  100_coverage_report_20250701_200005.md  AI_BRAIN_COST_OPTIMIZATION_REPORT.md  ALL_ISSUES_IDENTIFIED.md  ARCHITECTURE.md  AUDIT_COMPLETE_SUMMARY.md  AUTHENTICATION_BARRIERS_COMPLETE_REPORT.json  AUTHENTICATION_BARRIERS_COMPLETE_REPORT.md  AUTHENTICATION_BARRIER_ANALYSIS.md  AUTH_LOOP_ELIMINATION_REPORT.md  AUTONOMOUS_DOCUMENTATION_REPORT.md  BUG_REPORT.md  BUILD_OPTIMIZATION.md  BUILD_OPTIMIZATION_SUMMARY.md  BUILD_STATUS_REPORT.md  CHANGELOG.md  CHATGPT_VS_NOUS_ENVIRONMENTAL_BREAKDOWN.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP.md  CODEBASE_CLEANUP_SUMMARY.md  CODEBASE_STATUS.md  (+478 more)
.claude/: settings.local.json
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
__mocks__/: fileMock.js
analysis/: implementation_summary.md  improvement_comparison.md  mtmce_integration_analysis.md  mtmce_integration_opportunities.md  nous_technology_integration_summary.md  quantifiable_impact_metrics.md
api/: chat.py  enhanced_chat.py  mental_health_chat.py  therapeutic_chat.py
archive/: OPERATION_PUBLIC_OR_BUST_AUDIT.md  README.md  deploy.py  deploy_check.py  deployment_monitor.py  deployment_success_guarantee.py  validate_dependencies.py
attached_assets/: Pasted--Agent-Configuration-e-g-replit-agent-yml-agent-name-Codebase-Enhancer-role-system--1751104176623_1751104176624.txt  Pasted--Comprehensive-Fix-Request-for-Replit-Agent-Landing-Page-Google-OAuth-System-CRITICAL-INSTRU-1751354134989_1751354134991.txt  Pasted--GLOBAL-PORT-SANITIZER-DEPLOY-FIX-Objective-Detect-every-hard-coded-port-or-conflicting-1751092321939_1751092321940.txt  Pasted--MISSION-EXPAND-EXECUTIVE-BOARD-REPORT-MD-WITH-EVERY-USER-VISIBLE-FEATURE-1-Nuke-yo-1750971382028_1750971382028.txt  Pasted--NOUS-The-Ultimate-AI-Swiss-Army-Machete-Complete-Uncensored-and-Lovingly-Unhinged-Feature-Ma-1751158009721_1751158009722.txt  Pasted--OPERATION-PUBLIC-OR-BUST-Goal-guarantee-the-next-Deployment-is-100-PUBLIC-no-you-must-b-1751091195305_1751091195306.txt  Pasted--OPERATION-PUBLIC-OR-BUST-Goal-next-Deployment-MUST-load-publicly-no-auth-wall-Hunt-fix-1751171414676_1751171414676.txt  Pasted--OPERATION-ZERO-REDIRECT-Purpose-eradicate-the-You-must-be-logged-in-loop-on-Replit-by-wip-1750989792742_1750989792742.txt  Pasted--PATCH-THE-HOLE-OPERATION-WHY-D-YOU-GHOST-STEP-TEN-Objective-1-Locate-EVERY-10th-1750971794966_1750971794967.txt  Pasted--PROJECT-KATANA-ONE-TRUE-REPO-Mission-Guarantee-a-SINGLE-launch-command-deployment-co-1750963061594_1750963061595.txt  Pasted--Replit-AI-Agent-Fix-Instructions-NOUS-Codebase-Critical-Issues-PRIORITY-1-CRITICAL-SECURITY-1751349275873_1751349275874.txt  Pasted--Replit-Agent-Prompt-Complete-NOUS-Codebase-Remediation-Context-You-are-tasked-with-performing-1751351610007_1751351610008.txt  Pasted--Role-You-are-an-API-OAuth-Reliability-Engineer-Your-job-is-to-audit-every-external-service-i-1750930802790_1750930802790.txt  Pasted--SEED-Self-Optimization-and-Learning-Engine-Responsi-1751361138500_1751361138500.txt  Pasted--import-os-import-time-import-psutil-import-numpy-as-np-import-tensorflow-as-tf-import-asyncio-impor-1751121473695_1751121473696.txt  Pasted--markdown-Replit-Agent-No-more-stalling-apply-these-fixes-right-now-Copy-paste-this-prompt-i-1751357339736_1751357339736.txt  Pasted-Absolutely-The-drone-concept-in-your-system-is-one-of-its-most-innovative-futuristic-and-sc-1751363349835_1751363349836.txt  Pasted-Below-is-NOUS-v0-1-a-single-runnable-Flask-app-you-can-drop-straight-into-Replit-It-wires-up-1--1747213617426.txt  Pasted-Below-is-your-complete-enhanced-Integration-Agent-prompt-now-including-the-full-ai-system-brain-py-1751103297818_1751103297819.txt  Pasted-Copy-and-paste-this-directly-into-your-Replit-Agent-Prompt-box-Role-You-are-a-Refactor--1750930441800_1750930441800.txt  Pasted-Copy-paste-everything-below-into-your-Replit-Agent-s-Prompt-box-Role-You-are-a-Cost-Optim-1750931661685_1750931661686.txt  Pasted-Here-s-a-quick-hit-list-of-light-AI-tasks-you-can-punt-to-Hugging-Face-s-free-Inference-API-so-yo-1747376510520.txt  Pasted-Here-s-the-big-picture-you-re-beefing-up-your-Replit-hosted-AI-chatbot-with-a-full-suite-of-AA-reco-1747300748934.txt  Pasted-Here-s-the-complete-single-chat-prompt-for-your-Replit-AI-agent-It-includes-all-code-context-goa-1751153530305_1751153530305.txt  Pasted-Here-s-the-fully-augmented-Integration-Agent-prompt-now-with-explicit-instructions-to-crawl-and-a-1751102321481_1751102321481.txt  Pasted-I-ll-conduct-a-comprehensive-investigation-of-the-logging-and-Google-OAuth-issues-in-your-codebase--1751267663969_1751267663970.txt  Pasted-I-ll-help-you-investigate-the-Google-login-authentication-issues-Let-me-conduct-a-comprehensive-ana-1751270757351_1751270757352.txt  Pasted-Of-course-Acknowledging-the-requirement-for-an-exclusive-Google-OAuth-login-system-clarifies-the-in-1751251560540_1751251560541.txt  Pasted-Of-course-Here-is-the-full-report-on-the-issues-I-found-Report-on-Google-Login-API-In-1751254934813_1751254934814.txt  Pasted-Replit-blows-up-when-any-of-these-four-gremlins-slip-in-bad-replit-workflows-sloppy-replit-nix-pin-1751078756396_1751078756397.txt  Pasted-TITLE-Backend-Stability-Beta-Suite-Overhaul-Admin-toledonick98-gmail-com-OBJECTIVE-1--1751001694863_1751001694864.txt  Pasted-TITLE-Doc-Apocalypse-Rebuild-ALL-Documentation-from-Live-Code-OBJECTIVE-Assume-every-exist-1751002389845_1751002389845.txt  Pasted-TITLE-Doc-Rebuild-v2-Checkpointed-Dependency-Aware-0-PREP-Install-missing-C-1751003633690_1751003633690.txt  Pasted-TITLE-Full-Stack-Responsiveness-Sweep-Desktop-Mobile-Perfection-OBJECTIVE-Audit-refact-1751001102714_1751001102714.txt  (+8 more)
(+1292 files in other folders)
