[project]
name = "nous-personal-assistant"
version = "0.2.0"
description = "AI-powered personal assistant with comprehensive life management"
requires-python = ">=3.11"
dependencies = [
    # Core Web Framework - VERIFIED WORKING
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=22.0.0",
    
    # Database & ORM - VERIFIED WORKING
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "psycopg2-binary>=2.9.9",
    
    # Authentication & Security - VERIFIED WORKING
    "authlib>=1.3.0",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    
    # Environment & Configuration - VERIFIED WORKING
    "python-dotenv>=1.0.1",
    
    # HTTP & API - VERIFIED WORKING
    "requests>=2.32.3",
    
    # System Monitoring - VERIFIED WORKING
    "psutil>=5.9.8",
    
    # Audio Processing - VERIFIED WORKING
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
]

[project.optional-dependencies]
audio = ["soundfile>=0.12.1", "librosa>=0.10.1"]
security = ["flask-wtf>=1.2.1"]
ai = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
    "flask-testing>=0.8.1",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.6",
    "coverage>=7.4.0",
    "pipdeptree>=2.13.0",
    "pip-audit>=2.6.1",
    "deptry>=0.16.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly configure package discovery to prevent flat-layout errors
py-modules = ["main", "app", "database"]

[tool.setuptools.packages.find]
# Explicit package inclusion - prevents automatic discovery issues
include = [
    "models*", 
    "routes*", 
    "utils*", 
    "config*", 
    "api*", 
    "services*", 
    "handlers*", 
    "core*", 
    "voice_interface*"
]

# Exclude all problematic directories that caused the 17-package error
exclude = [
    "backup*", 
    "logs*", 
    "uploads*", 
    "instance*", 
    "flask_session*", 
    "static*", 
    "templates*",
    "tests*",
    "scripts*",
    "docs*",
    "build_assets*",
    "project_files*",
    "__pycache__*",
    "*.tests*",
    "*.egg-info*"
]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.md"]
