[project]
name = "nous-personal-assistant"
version = "0.2.0"
description = "AI-powered personal assistant with comprehensive life management"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "NOUS Development Team"}
]
keywords = ["ai", "personal-assistant", "flask", "web-application", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    # Core Web Framework - Essential
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=22.0.0",
    
    # Database & ORM - Essential
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "psycopg2-binary>=2.9.9",
    
    # Authentication & Security - Essential
    "authlib>=1.3.0",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    
    # Environment & Configuration - Essential
    "python-dotenv>=1.0.1",
    
    # HTTP & API - Essential
    "requests>=2.32.3",
    
    # System Monitoring - Lightweight
    "psutil>=5.9.8",
    
    # Real-time Communication - For Chat Features
    "flask-socketio>=5.3.6",
    
    # Async Processing - For Background Tasks
    "celery>=5.3.4",
    
    # Monitoring & Metrics - For Production
    "prometheus-client>=0.19.0",
    
    # Compression - For Performance
    "zstandard>=0.22.0",
    
    # AI Services - Core Intelligence
    "google-generativeai>=0.3.2",
    
    # Computer Vision - Visual Intelligence
    "opencv-python>=4.8.1",
    "pytesseract>=0.3.10",
    "pillow>=10.1.0",
    
    # Machine Learning - Analytics
    "scikit-learn>=1.3.2",
    "numpy>=1.24.4",
    
    # Audio Processing - Voice Features
    "speechrecognition>=3.10.0",
    
    # Spotify Integration
    "spotipy>=2.22.1",
    
    # JWT Authentication
    "pyjwt>=2.8.0",
    
    # Machine Learning & Data Processing - For Adaptive AI
    "numpy>=1.24.0",
    
    # JWT Authentication
    "PyJWT>=2.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/nous-personal-assistant"
"Bug Reports" = "https://github.com/yourusername/nous-personal-assistant/issues"
"Source" = "https://github.com/yourusername/nous-personal-assistant"
"Documentation" = "https://nous-docs.example.com"

[project.scripts]
nous = "main:main"

[project.optional-dependencies]
audio = ["soundfile>=0.12.1", "librosa>=0.10.1"]
security = ["flask-wtf>=1.2.1"]
ai = ["google-generativeai>=0.8.0"]
google = ["google-auth>=2.0.0", "google-auth-oauthlib>=1.0.0", "google-api-python-client>=2.0.0", "gkeepapi>=0.13.0", "googlemaps>=4.10.0"]
spotify = ["spotipy>=2.22.1"]
monitoring = ["celery>=5.3.0", "prometheus-client>=0.20.0", "zstandard>=0.22.0"]
# Enhanced Intelligence Dependencies
intelligence = ["opencv-python>=4.8.0", "pytesseract>=0.3.10", "pillow>=10.0.0", "numpy>=1.24.0", "scikit-learn>=1.3.0", "speech-recognition>=3.10.0"]
complete = ["soundfile>=0.12.1", "librosa>=0.10.1", "google-generativeai>=0.8.0", "google-auth>=2.0.0", "google-auth-oauthlib>=1.0.0", "google-api-python-client>=2.0.0", "gkeepapi>=0.13.0", "googlemaps>=4.10.0", "spotipy>=2.22.1", "celery>=5.3.0", "prometheus-client>=0.20.0", "zstandard>=0.22.0", "opencv-python>=4.8.0", "pytesseract>=0.3.10", "pillow>=10.0.0", "numpy>=1.24.0", "scikit-learn>=1.3.0", "speech-recognition>=3.10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
    "flask-testing>=0.8.1",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.6",
    "coverage>=7.4.0",
    "pipdeptree>=2.13.0",
    "pip-audit>=2.6.1",
    "deptry>=0.16.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.build_optimization]
# Build speed optimization settings
skip_bytecode = true
no_cache = true
prefer_binary = true

[tool.setuptools]
py-modules = ["main", "app", "database"]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "models*",
    "routes*", 
    "utils*",
    "config*",
    "api*",
    "services*", 
    "handlers*",
    "core*",
    "voice_interface*"
]
exclude = [
    "backup*",
    "logs*", 
    "uploads*",
    "cleanup*",
    "instance*",
    "flask_session*",
    "build_assets*",
    "static*",
    "templates*",
    "tests*",
    "scripts*",
    "__pycache__*",
    "*.tests*",
    "docs*"
]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.md"]
