[project]
name = "nous-personal-assistant"
version = "0.2.0"
description = "AI-powered personal assistant with comprehensive life management"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "NOUS Development Team"}
]
keywords = ["ai", "personal-assistant", "flask", "web-application", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=22.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "psycopg2-binary>=2.9.9",
    "authlib>=1.3.0",
    "flask-session>=0.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "psutil>=5.9.8",
    "flask-socketio>=5.3.6",
    "google-generativeai>=0.3.2",
    "pillow>=10.1.0",
    "numpy>=1.24.4",
    "spotipy>=2.22.1",
    "pyjwt>=2.8.0",
    "flask-wtf>=1.2.2",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/nous-personal-assistant"
"Bug Reports" = "https://github.com/yourusername/nous-personal-assistant/issues"
"Source" = "https://github.com/yourusername/nous-personal-assistant"

[project.scripts]
nous = "main:main"

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.2"
]
scheduler = [
    "apscheduler>=3.10.4"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.6",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "models*",
    "routes*", 
    "utils*",
    "config*",
    "api*",
]
exclude = [
    "backup*",
    "logs*", 
    "uploads*",
    "instance*",
    "flask_session*",
    "tests*",
    "__pycache__*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["archive", "node_modules", "instance", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
